# watchdog

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.sh  mount.sh  sonar-project.properties  test  travis.yml  update_sonar_version.py  vbox_mount.sh  version.txt
.github/workflows/: linux.yml
cmake/: clean-cmake.cmake  config-cmake.hpp.in  config.cmake  finder.cmake  test_configurations.sh  tests.cmake
samples/: watchdog.json  watchdog.xml
src/: Log.cpp  Log.hpp  WJSON.cpp  WRun.cpp  WUtils.cpp  WXML.cpp  config.hpp  main.cpp  watchdog.c  watchdog.cpp  watchdog.h  watchdog.hpp  watchdog_run.c  watchdog_run.cpp  watchdog_utils.c  watchdog_utils.cpp  watchdog_xml.c  watchdog_xml.cpp
src/wd/: Watchdog.cpp  Watchdog.hpp
src/wd/config/: ConfigJSON.cpp  ConfigJSON.hpp  ConfigXML.cpp  ConfigXML.hpp  IConfigable.hpp
src/wd/run/: Process.hpp  Run.cpp  Run.hpp
src/wd/utils/: Helper.hpp  Log.cpp  Log.hpp
